fixed some lazy-load issues